번역 라이브러리 적용완료

--- a/src/lang/ja.json
+++ b/src/lang/ja.json
@@ -1,3 +1,5 @@
 {
-    "hyunheeLee": "イヒョンヒ"
+    "hyunheeLee": "イヒョンヒ",
+    "Software Developer": "ソフトウェアエンジニア",
+    "About": "2017년부터 개발을 하고있는 이현희 입니다."
 }
