--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -1,3 +1,5 @@
 {
-    "hyunheeLee": "イヒョンヒ"
+    "hyunheeLee": "이현희",
+    "Software Developer": "소프트웨어 개발자",
+    "About": "2017년부터 개발을 하고있는 이현희 입니다."
 }
