--- a/src/lang/cn.json
+++ b/src/lang/cn.json
@@ -1,3 +1,5 @@
 {
-    "hyunheeLee": "イヒョンヒ"
+    "hyunheeLee": "李 贤熹",
+    "Software Developer": "程序员",
+    "About": "2017년부터 개발을 하고있는 이현희 입니다."
 }
