--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,3 +1,5 @@
 {
-    "hyunheeLee": "Hyunhee Lee"
+    "hyunheeLee": "Hyunhee Lee",
+    "Software Developer": "Software Developer",
+    "About": "2017년부터 개발을 하고있는 이현희 입니다."
 }
