--- a/src/lang/tw.json
+++ b/src/lang/tw.json
@@ -1,3 +1,5 @@
 {
-    "hyunheeLee": "イヒョンヒ"
+    "hyunheeLee": "李 賢熹",
+    "Software Developer": "Software Developer",
+    "About": "2017년부터 개발을 하고있는 이현희 입니다."
 }
