포폴사이트 번역수정

--- a/src/lang/cn.json
+++ b/src/lang/cn.json
@@ -1,5 +1,6 @@
 {
     "hyunheeLee": "李 贤熹",
     "Software Developer": "程序员",
-    "About": "2017년부터 개발을 하고있는 이현희 입니다."
+    "About": "2017년부터 개발을 하고있는 이현희 입니다.",
+    "Education": "九州大学 艺术工学部 艺术情报设计学科 学士 毕业 2013.04 - 2017.03"
 }
