--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,5 +1,6 @@
 {
     "hyunheeLee": "Hyunhee Lee",
     "Software Developer": "Software Developer",
-    "About": "2017년부터 개발을 하고있는 이현희 입니다."
+    "About": "2017년부터 개발을 하고있는 이현희 입니다.",
+    "Education": "Kyushu University Art and Information design Apr.2013 -  Mar.2017"
 }
