--- a/src/lang/ja.json
+++ b/src/lang/ja.json
@@ -1,5 +1,6 @@
 {
     "hyunheeLee": "イヒョンヒ",
     "Software Developer": "ソフトウェアエンジニア",
-    "About": "2017년부터 개발을 하고있는 이현희 입니다."
+    "About": "2017년부터 개발을 하고있는 이현희 입니다.",
+    "Education": "九州大学 芸術工学部 芸術情報設計学科 卒業 2013.04 - 2017.03"
 }
