--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -1,5 +1,6 @@
 {
     "hyunheeLee": "이현희",
     "Software Developer": "소프트웨어 개발자",
-    "About": "2017년부터 개발을 하고있는 이현희 입니다."
+    "About": "2017년부터 개발을 하고있는 이현희 입니다.",
+    "Education": "규슈대학 예술공학부 예술정보설계학과 졸업 2013.04 - 2017.03"
 }
