--- a/src/lang/tw.json
+++ b/src/lang/tw.json
@@ -1,5 +1,6 @@
 {
     "hyunheeLee": "李 賢熹",
-    "Software Developer": "Software Developer",
-    "About": "2017년부터 개발을 하고있는 이현희 입니다."
+    "Software Developer": "程序員",
+    "About": "2017년부터 개발을 하고있는 이현희 입니다.",
+    "Education": "九州大学 艺术工学部 艺术情报设计学科 学士 毕业 2013.04 - 2017.03"
 }
