--- a/src/lang/ja.json
+++ b/src/lang/ja.json
@@ -1,6 +1,6 @@
 {
     "hyunheeLee": "イヒョンヒ",
-    "Software Developer": "ソフトウェアエンジニア",
-    "About": "2017년부터 개발을 하고있는 이현희 입니다.",
+    "Software Developer": "ITエンジニア",
+    "About": "2017年大学卒業から現在までITエンジニアのキャリアパスを歩んでいます。\n 2013年に大学に入学する前、2010年1月から2013年1月までは兵役義務の一環として工場労働者として3年間の経験があります。",
     "Education": "九州大学 芸術工学部 芸術情報設計学科 卒業 2013.04 - 2017.03"
 }
