--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -1,6 +1,6 @@
 {
     "hyunheeLee": "이현희",
     "Software Developer": "소프트웨어 개발자",
-    "About": "2017년부터 개발을 하고있는 이현희 입니다.",
+    "About": "2017년부터 개발을 하고있는 이현희 입니다.\n 2013년 대학에 입학하기전, 2010년 1월부터 2013년 1월까지 산업기능요원으로 3년간 복무한 경험이 있습니다.",
     "Education": "규슈대학 예술공학부 예술정보설계학과 졸업 2013.04 - 2017.03"
 }
