--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,6 +1,9 @@
 {
     "hyunheeLee": "Hyunhee Lee",
     "Software Developer": "Software Developer",
-    "About": "2017년부터 개발을 하고있는 이현희 입니다.",
-    "Education": "Kyushu University Art and Information design Apr.2013 -  Mar.2017"
+    "About": "I have been on the career path of an IT Engineer from my graduation from college in 2017 to the present;\n prior to entering college in 2013, I had three years of experience as a factory worker as part of my military service obligation from January 2010 to January 2013.",
+    "Education1-1": "Kyushu University Fukuoka, JAPAN",
+    "Education1-2": "Bachelor of Design, Art and Information Design Apr. 2013 to Mar. 2017",
+    "Education2-1": "The Chinese University of Hong Kong HONG KONG",
+    "Education2-2": "International Summer school (Mandarin language) Aug. 2016"
 }
