--- a/src/lang/tw.json
+++ b/src/lang/tw.json
@@ -1,6 +1,6 @@
 {
     "hyunheeLee": "李 賢熹",
     "Software Developer": "程序員",
-    "About": "2017년부터 개발을 하고있는 이현희 입니다.",
+    "About": "Worked as an IT Engineer from graduation from University in 2017 to the present;\n prior to entering University in 2013, I had three years of experience as a factory worker as part of my military service from January 2010 to January 2013.",
     "Education": "九州大学 艺术工学部 艺术情报设计学科 学士 毕业 2013.04 - 2017.03"
 }
