4월10일까지의 결과물

--- a/src/lang/cn.json
+++ b/src/lang/cn.json
@@ -1,6 +1,15 @@
 {
     "hyunheeLee": "李 贤熹",
     "Software Developer": "程序员",
-    "About": "I have been on the career path of an IT Engineer from my graduation from college in 2017 to the present;\n  prior to entering college in 2013, I had three years of experience as a factory worker as part of my military service obligation from January 2010 to January 2013.",
-    "Education": "九州大学 艺术工学部 艺术情报设计学科 学士 毕业 2013.04 - 2017.03"
+    "NotTranslated": "Some pages are not translated yet.",
+    "About": "我叫李贤熹，是来自韩国首尔的一名程序员。",
+    "About_Japan": "Worked as an IT Engineer from graduation from University in 2017 to the present;",
+    "About_Korea": "Prior to entering University in 2013, I was engaged in the military service for three years as a factory worker from January 2010 to January 2013.",
+    "QU1-1": "九州大学",
+    "QU1-2": "艺术工学部 艺术情报设计学科 学士",
+    "QU2-1": "プログラミングとデザインの勉強をしました。",
+    "CHUK1-1": "香港中文大学",
+    "Education2-2": "国际暑期课程(中文课程)",
+    "Education2-3": "1か月間、協定校だった香港中文大学で中国語の短期留学を経験しました。",
+    "福岡中国語学友会": "福岡中国語学友会"
 }
