--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,9 +1,38 @@
 {
     "hyunheeLee": "Hyunhee Lee",
     "Software Developer": "Software Developer",
-    "About": "I have been on the career path of an IT Engineer from my graduation from college in 2017 to the present;\n prior to entering college in 2013, I had three years of experience as a factory worker as part of my military service obligation from January 2010 to January 2013.",
-    "Education1-1": "Kyushu University",
-    "Education1-2": "Bachelor of Design, Art and Information Design",
-    "Education2-1": "The Chinese University of Hong Kong",
-    "Education2-2": "International Summer school (Mandarin language)"
+    "NotTranslated": "Some pages are not translated yet.",
+    "About": "I am Hyunhee Lee from Seoul, Korea. Engaging an IT Engineer.",
+    "About_Japan": "Worked as an IT Engineer from graduation from University in 2017 to the present;",
+    "Smaregi Inc.": "Smaregi Inc.",
+    "Growth": "A Tokyo Stock Exchange Growth market listed company",
+    "Jun. 2021 to Present": "Jun. 2021 to Present",
+    "Smaregi-1": "Software Developer at Development department",
+    "Smaregi-2": "Developed in-house tool using modern PHP frameworks",
+    "About_Korea": "Prior to entering University in 2013, I was engaged in the military service for three years as a factory worker from January 2010 to January 2013.",
+    "QU1-1": "Kyushu University",
+    "QU1-2": "Bachelor of Design, Art and Information Design",
+    "QU2-1": "プログラミングとデザインの勉強をしました。",
+    "CHUK1-1": "The Chinese University of Hong Kong",
+    "Education2-2": "International Summer school (Mandarin language)",
+    "Education2-3": "1か月間、協定校だった香港中文大学で中国語の短期留学を経験しました。中華文化圏への視野が広がりました。",
+    "GeikoOke": "Geiko Oke",
+    "GeikoOkePeriod": "Apr. 2013 to Mar. 2017",
+    "GeikoOkeDescription-1": "大学時代部活動として九州大学芸術工学部フィルハーモニー管弦楽団のクラリネットパートを担当しました。",
+    "GeikoOkeDescription-2": "4年間在籍の間、3回の定期演奏会と4回の学内演奏会、そして1回の合同オーケストラの演奏会に参加しました。",
+    "GeikoOkeDescription-3": "2015年はクラリネットパートリーダーを務めました。",
+    "福岡中国語学友会": "福岡中国語学友会",
+    "2015 to 2019": "2015 to 2019",
+    "福岡中国語学友会-1": "Facebookグループ「福岡中国語学友会」にて会長と2人で中国語勉強会の開催人を務めました。たくさんの中華文化圏の方達と交流できる貴重な経験になりました。",
+    "Forest Witch Description-1": "[プロジェクト期間] 2015年12月～2016年1月（2ヶ月）",
+    "Forest Witch Description-2": "[言語] 日本語・韓国語・中国語（繁体字）",
+    "Forest Witch Description-3": "[説明] 大学時代4人のチームでゲームを作り上げ、第9回福岡ゲームコンテストに出品したアクションゲームです。",
+    "Forest Witch Description-4": "[プロジェクト期間] 手に汗を握る迫真力のあるアクションゲームで、周りの方にから好評を得ていました。",
+    "Forest Witch Download": "Download URL（Google Drive）",
+    "基本情報技術者": "Fundamental Information Technology Engineer Examination",
+    "色彩検定 2級": "Color Cordination The Second Level`",
+    "ファイナンシャルプランナー 3級": "3rd grade Certified Skilled Professional of Financial Planning",
+    "전자기기기능사": "Craftsman Electronic Apparatus",
+    "JLPT Level 1": "Japanese Language Proficiency Test Level 1",
+    "HSK Level 6": "Hanyu shuiping kaoshi level 6"
 }
