--- a/src/lang/ja.json
+++ b/src/lang/ja.json
@@ -1,6 +1,38 @@
 {
     "hyunheeLee": "イヒョンヒ",
     "Software Developer": "ITエンジニア",
-    "About": "2017年大学卒業から現在までITエンジニアのキャリアパスを歩んでいます。\n 2013年に大学に入学する前、2010年1月から2013年1月までは兵役義務の一環として工場労働者として3年間の経験があります。",
-    "Education": "九州大学 芸術工学部 芸術情報設計学科 卒業 2013.04 - 2017.03"
+    "NotTranslated": "一部翻訳されていない部分があります。",
+    "About": "韓国・ソウル出身のイヒョンヒと申します。",
+    "About_Japan": "Worked as an IT Engineer from graduation from University in 2017 to the present;",
+    "Smaregi Inc.": "株式会社スマレジ",
+    "Growth": "グロース市場上場企業",
+    "Jun. 2021 to Present": "2021年6月から現在",
+    "Smaregi-1": "開発部",
+    "Smaregi-2": "モダンなPHPフレームワークを使い社内ツール開発中。",
+    "About_Korea": "Prior to entering University in 2013, I was engaged in the military service for three years as a factory worker from January 2010 to January 2013.",
+    "QU1-1": "九州大学",
+    "QU1-2": "芸術工学部 芸術情報設計学科",
+    "QU2-1": "九州大学 芸術工学部 芸術情報設計学科にて、主にプログラミングの授業を取りました。",
+    "CHUK1-1": "香港中文大学",
+    "Education2-2": "International Summer school (北京語課程)",
+    "Education2-3": "1か月間、協定校だった香港中文大学で中国語の短期留学を経験しました。中華文化圏への視野が広がりました。",
+    "GeikoOke": "九州大学芸術工学部フィルハーモニー管弦楽団",
+    "GeikoOkePeriod": "2013年4月 ～ 2017年3月",
+    "GeikoOkeDescription-1": "大学時代部活動として九州大学芸術工学部フィルハーモニー管弦楽団のクラリネットパートを担当しました。",
+    "GeikoOkeDescription-2": "4年間在籍の間、3回の定期演奏会と4回の学内演奏会、そして1回の合同オーケストラの演奏会に参加しました。",
+    "GeikoOkeDescription-3": "2015年はクラリネットパートリーダーを務めました。",
+    "福岡中国語学友会": "福岡中国語学友会",
+    "2015 to 2019": "2015年 ～ 2019年",
+    "福岡中国語学友会-1": "Facebookグループ「福岡中国語学友会」にて会長と2人で中国語勉強会の開催人を務めました。たくさんの中華文化圏の方達と交流できる貴重な経験になりました。",
+    "Forest Witch Description-1": "[プロジェクト期間] 2015年12月 ～ 2016年1月（2ヶ月）",
+    "Forest Witch Description-2": "[言語] 日本語・韓国語・中国語（繁体字）",
+    "Forest Witch Description-3": "[説明] 大学時代4人のチームでゲームを作り上げ、第9回福岡ゲームコンテストに出品したアクションゲームです。",
+    "Forest Witch Description-4": "[プロジェクト期間] 手に汗を握る迫真力のあるアクションゲームで、周りの方にから好評を得ていました。",
+    "Forest Witch Download": "ゲームダウンロード（グーグルドライブ）",
+    "基本情報技術者": "基本情報技術者",
+    "色彩検定 2級": "色彩検定 2級",
+    "ファイナンシャルプランナー 3級": "ファイナンシャルプランナー 3級（日本FP協会）",
+    "전자기기기능사": "電子機器技能士",
+    "JLPT Level 1": "新日本語能力試験（JLPT）1級",
+    "HSK Level 6": "新漢語水平考試（HSK）6級"
 }
