--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -1,6 +1,37 @@
 {
     "hyunheeLee": "이현희",
     "Software Developer": "소프트웨어 개발자",
-    "About": "2017년부터 개발을 하고있는 이현희 입니다.\n 2013년 대학에 입학하기전, 2010년 1월부터 2013년 1월까지 산업기능요원으로 3년간 복무한 경험이 있습니다.",
-    "Education": "규슈대학 예술공학부 예술정보설계학과 졸업 2013.04 - 2017.03"
+    "NotTranslated": "아직 번역이 되지않은 부분이 있습니다.",
+    "About": "대한민국 서울출신의 IT개발자 이현희 입니다.",
+    "About_Japan": "Worked as an IT Engineer from graduation from University in 2017 to the present;",
+    "Smaregi Inc.": "주식회사 스마레지",
+    "Growth": "도쿄증시 그로스시장 상장 기업",
+    "Jun. 2021 to Present": "2021년6월부터 현재",
+    "Smaregi-1": "개발부",
+    "Smaregi-2": "モダンなPHPフレームワークを使い社内ツール開発中。",
+    "About_Korea": "Prior to entering University in 2013, I was engaged in the military service for three years as a factory worker from January 2010 to January 2013.",
+    "QU1-1": "규슈대학",
+    "QU1-2": "예술공학부 예술정보설계학과 학사",
+    "QU2-1": "プログラミングとデザインの勉強をしました。",
+    "CHUK1-1": "홍콩중문대학",
+    "Education2-2": "International Summer school (중국어 과정)",
+    "Education2-3": "협정교였던 홍콩중문대학에서 한달간 중국어단기유학을 경험하였습니다.",
+    "GeikoOke": "九州大学芸術工学部フィルハーモニー管弦楽団",
+    "GeikoOkePeriod": "2013年4月 ～ 2017年3月",
+    "GeikoOkeDescription-1": "大学時代部活動として九州大学芸術工学部フィルハーモニー管弦楽団のクラリネットパートを担当しました。",
+    "GeikoOkeDescription-2": "4年間在籍の間、3回の定期演奏会と4回の学内演奏会、そして1回の合同オーケストラの演奏会に参加しました。",
+    "GeikoOkeDescription-3": "2015年はクラリネットパートリーダーを務めました。",
+    "福岡中国語学友会": "후쿠오카 중국어 학우회",
+    "福岡中国語学友会-1": "Facebookグループ「福岡中国語学友会」にて会長と2人で中国語勉強会の開催人を務めました。たくさんの中華文化圏の方達と交流できる貴重な経験になりました。",
+    "Forest Witch Description-1": "[プロジェクト期間] 2015年12月 ～ 2016年1月（2ヶ月）",
+    "Forest Witch Description-2": "[言語] 日本語・韓国語・中国語（繁体字）",
+    "Forest Witch Description-3": "[説明] 大学時代4人のチームでゲームを作り上げ、第9回福岡ゲームコンテストに出品したアクションゲームです。",
+    "Forest Witch Description-4": "[プロジェクト期間] 手に汗を握る迫真力のあるアクションゲームで、周りの方にから好評を得ていました。",
+    "Forest Witch Download": "ゲームダウンロード（グーグルドライブ）",
+    "基本情報技術者": "基本情報技術者",
+    "色彩検定 2級": "色彩検定 2級",
+    "ファイナンシャルプランナー 3級": "ファイナンシャルプランナー 3級（日本FP協会）",
+    "전자기기기능사": "電子機器技能士",
+    "JLPT Level 1": "新日本語能力試験（JLPT）1級",
+    "HSK Level 6": "新漢語水平考試（HSK）6級"
 }
