--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -3,35 +3,80 @@
     "Software Developer": "소프트웨어 개발자",
     "NotTranslated": "아직 번역이 되지않은 부분이 있습니다.",
     "About": "대한민국 서울출신의 IT개발자 이현희 입니다.",
-    "About_Japan": "Worked as an IT Engineer from graduation from University in 2017 to the present;",
-    "Smaregi Inc.": "주식회사 스마레지",
+
+    "About_Japan": "Worked as an IT Engineer from graduation from University in 2017 to the present",
+
+    "Smaregi Inc.": "Smaregi Inc.",
     "Growth": "도쿄증시 그로스시장 상장 기업",
-    "Jun. 2021 to Present": "2021년6월부터 현재",
+    "Jun. 2021 to Present": "2021.06 ～ 현재",
     "Smaregi-1": "개발부",
-    "Smaregi-2": "モダンなPHPフレームワークを使い社内ツール開発中。",
+    "Smaregi-2": "모던한 PHP프레임워크를 사용하여 사내 툴 개발중",
+
+    "AdInte Co. ltd.": "AdInte Co. ltd.",
+    "Nov. 2020 to May 2021": "2020.11 ～ 2021.05",
+    "AdInte-1": "Software Developer at Product Division",
+    "AdInte-2": "A. Yarn Trade System",
+    "AdInte-3": "Developed a yarn trade system that supports multiple languages: Japanese, Mandarin Chinese, and English using codeigniter PHP framework",
+    "AdInte-4": "B. Advertisement space management tool",
+    "AdInte-5": "Developed a tool that manages each store’s advertisement space information that used to be managed in Excel",
+
+    "Cyber Port Inc.": "Cyber Port Inc.",
+    "Aug. 2019 to Oct. 2020": "2019.08 ～ 2020.10",
+    "CyberPort-1": "Web Developer at Development department",
+    "CyberPort-2": "Developed landing page designs, e-commerce sites, an invitation-only shopping mall website and created Search Engine Optimisation (SEO) strategies",
+
+    "Livelynx Inc.": "Livelynx Inc.",
+    "Sep. 2017 to May 2019": "Sep. 2017 to May 2019",
+    "Livelynx-1": "Software Developer at System Integration Division",
+    "Livelynx-2": "Developed a SDN controller system and three graph programs using modern JavaScript library(react, redux) technologies",
+
+    "Cross Games Inc.": "Cross Games Inc.",
+    "CrossGames-1": "Sep. 2016 to Mar. 2017 Student Internship",
+    "CrossGames-2": "Apr. 2017 to Jul. 2017 Game Programmer",
+    "CrossGames-3": "Game programmer at Development department",
+    "CrossGames-4": "Developed a volleyball game for smartphones on consignment using Unity",
+
     "About_Korea": "Prior to entering University in 2013, I was engaged in the military service for three years as a factory worker from January 2010 to January 2013.",
+
+    "Powertronics Co.,Ltd.": "주식회사 파워트로닉스",
+    "Aug. 2011 to Jan. 2013": "2011年8月 ～ 2013年1月",
+    "Powertronics-1": "생산부",
+    "Powertronics-2": "Worked as a factory worker as part of military service (Mar. 2010 to Jan. 2013)",
+    "Powertronics-3": "Led a team of four and managed antenna production, packaging and quality check, increased productivity about 33% by voluntarily creating a quality check manual",
+    "Powertronics-4": "Awarded as the best staff of 2012",
+
+    "HanShinKiJeon Co., Ltd.": "주식회사 한신기전",
+    "Jan. 2010 to Aug. 2011": "2010年1月 ～ 2011年8月",
+    "HanShinKiJeon-1": "생산부 크린룸소속",
+    "HanShinKiJeon-2": "Worked as a factory worker as part of military service (Mar. 2010 to Jan. 2013)",
+    "HanShinKiJeon-3": "Inspected parts of hard disk and printer",
+    "HanShinKiJeon-4": "Managed the molds that produced the hard disk and printer components",
+
     "QU1-1": "규슈대학",
     "QU1-2": "예술공학부 예술정보설계학과 학사",
-    "QU2-1": "プログラミングとデザインの勉強をしました。",
+    "QU2-1": "4년간 규슈대학 예술공학부 예술정보설계학과에서 주로 프로그래밍에 관련된 수업을 이수했습니다.",
     "CHUK1-1": "홍콩중문대학",
     "Education2-2": "International Summer school (중국어 과정)",
     "Education2-3": "협정교였던 홍콩중문대학에서 한달간 중국어단기유학을 경험하였습니다.",
-    "GeikoOke": "九州大学芸術工学部フィルハーモニー管弦楽団",
+    "GeikoOke": "규슈대학 예술공학부 필하모니 관현악단",
     "GeikoOkePeriod": "2013年4月 ～ 2017年3月",
     "GeikoOkeDescription-1": "大学時代部活動として九州大学芸術工学部フィルハーモニー管弦楽団のクラリネットパートを担当しました。",
     "GeikoOkeDescription-2": "4年間在籍の間、3回の定期演奏会と4回の学内演奏会、そして1回の合同オーケストラの演奏会に参加しました。",
     "GeikoOkeDescription-3": "2015年はクラリネットパートリーダーを務めました。",
+
     "福岡中国語学友会": "후쿠오카 중국어 학우회",
     "福岡中国語学友会-1": "Facebookグループ「福岡中国語学友会」にて会長と2人で中国語勉強会の開催人を務めました。たくさんの中華文化圏の方達と交流できる貴重な経験になりました。",
-    "Forest Witch Description-1": "[プロジェクト期間] 2015年12月 ～ 2016年1月（2ヶ月）",
-    "Forest Witch Description-2": "[言語] 日本語・韓国語・中国語（繁体字）",
-    "Forest Witch Description-3": "[説明] 大学時代4人のチームでゲームを作り上げ、第9回福岡ゲームコンテストに出品したアクションゲームです。",
-    "Forest Witch Description-4": "[プロジェクト期間] 手に汗を握る迫真力のあるアクションゲームで、周りの方にから好評を得ていました。",
-    "Forest Witch Download": "ゲームダウンロード（グーグルドライブ）",
-    "基本情報技術者": "基本情報技術者",
-    "色彩検定 2級": "色彩検定 2級",
-    "ファイナンシャルプランナー 3級": "ファイナンシャルプランナー 3級（日本FP協会）",
-    "전자기기기능사": "電子機器技能士",
-    "JLPT Level 1": "新日本語能力試験（JLPT）1級",
-    "HSK Level 6": "新漢語水平考試（HSK）6級"
+
+    "Forest Witch Description-1": "[프로젝트기간] 2015年12月 ～ 2016年1月（2ヶ月）",
+    "Forest Witch Description-2": "[언어] 한국어・일본어・중국어（번체자）",
+    "Forest Witch Description-3": "[설명] 大学時代4人のチームでゲームを作り上げ、第9回福岡ゲームコンテストに出品したアクションゲームです。",
+    "Forest Witch Description-4": "手に汗を握る迫真力のあるアクションゲームで、周りの方にから好評を得ていました。",
+    "Forest Witch Download": "게임다운로드（구글드라이브）",
+
+    "基本情報技術者": "기본정보기술자",
+    "色彩検定 2級": "색채검정 2급",
+    "ファイナンシャルプランナー 3級": "파이낸셜플래너 3급（일본FP협회）",
+    "전자기기기능사": "전자기기기능사",
+    "JLPT Level 1": "신일본어능력시험（JLPT）1급",
+    "HSK Level 6": "신한어수평고시（HSK）6급"
 }
