--- a/src/lang/ja.json
+++ b/src/lang/ja.json
@@ -3,32 +3,79 @@
     "Software Developer": "ITエンジニア",
     "NotTranslated": "一部翻訳されていない部分があります。",
     "About": "韓国・ソウル出身のイヒョンヒと申します。",
-    "About_Japan": "Worked as an IT Engineer from graduation from University in 2017 to the present;",
+
+    "About_Japan": "Worked as an IT Engineer from graduation from University in 2017 to the present",
+
     "Smaregi Inc.": "株式会社スマレジ",
     "Growth": "グロース市場上場企業",
     "Jun. 2021 to Present": "2021年6月から現在",
     "Smaregi-1": "開発部",
     "Smaregi-2": "モダンなPHPフレームワークを使い社内ツール開発中。",
+
+    "AdInte Co. ltd.": "株式会社アドインテ",
+    "Nov. 2020 to May 2021": "2020年11月 ～ 2021年5月",
+    "AdInte-1": "プロダクトDiv エンジニア",
+    "AdInte-2": "A. 糸貿易システム",
+    "AdInte-3": "Developed a yarn trade system that supports multiple languages: Japanese, Mandarin Chinese, and English using codeigniter PHP framework",
+    "AdInte-4": "B. 広告枠管理ツール",
+    "AdInte-5": "Developed a tool that manages each store’s advertisement space information that used to be managed in Excel",
+
+    "Cyber Port Inc.": "株式会社サイバーポート",
+    "Aug. 2019 to Oct. 2020": "2019年8月 ～ 2020年10月",
+    "CyberPort-1": "Web Developer at Development department",
+    "CyberPort-2": "Developed landing page designs, e-commerce sites, an invitation-only shopping mall website and created Search Engine Optimisation (SEO) strategies",
+
+    "Livelynx Inc.": "株式会社ライブリンクス",
+    "Sep. 2017 to May 2019": "2017年9月 ～ 2019年5月",
+    "Livelynx-1": "Software Developer at System Integration Division",
+    "Livelynx-2": "Developed a SDN controller system and three graph programs using modern JavaScript library(react, redux) technologies",
+
+    "Cross Games Inc.": "株式会社クロスゲームズ",
+    "CrossGames-1": "2016年9月 ～ 2017年3月 学生インターンシップ",
+    "CrossGames-2": "2017年4月 ～ 2017年7月 ゲームプログラマー",
+    "CrossGames-3": "Game programmer at Development department",
+    "CrossGames-4": "Developed a volleyball game for smartphones on consignment using Unity",
+
     "About_Korea": "Prior to entering University in 2013, I was engaged in the military service for three years as a factory worker from January 2010 to January 2013.",
+
+    "Powertronics Co.,Ltd.": "株式会社パワートロニクス",
+    "Aug. 2011 to Jan. 2013": "2011年8月 ～ 2013年1月",
+    "Powertronics-1": "生産部",
+    "Powertronics-2": "Worked as a factory worker as part of military service (Mar. 2010 to Jan. 2013)",
+    "Powertronics-3": "Led a team of four and managed antenna production, packaging and quality check, increased productivity about 33% by voluntarily creating a quality check manual",
+    "Powertronics-4": "Awarded as the best staff of 2012",
+
+    "HanShinKiJeon Co., Ltd.": "株式会社韓信企電",
+    "Jan. 2010 to Aug. 2011": "2010年1月 ～ 2011年8月",
+    "HanShinKiJeon-1": "生産部",
+    "HanShinKiJeon-2": "Worked as a factory worker as part of military service (Mar. 2010 to Jan. 2013)",
+    "HanShinKiJeon-3": "Inspected parts of hard disk and printer",
+    "HanShinKiJeon-4": "Managed the molds that produced the hard disk and printer components",
+
     "QU1-1": "九州大学",
     "QU1-2": "芸術工学部 芸術情報設計学科",
-    "QU2-1": "九州大学 芸術工学部 芸術情報設計学科にて、主にプログラミングの授業を取りました。",
+    "QU2-1": "九州大学 芸術工学部 芸術情報設計学科にて、主にプログラミングの授業を履修しました。",
+
     "CHUK1-1": "香港中文大学",
     "Education2-2": "International Summer school (北京語課程)",
-    "Education2-3": "1か月間、協定校だった香港中文大学で中国語の短期留学を経験しました。中華文化圏への視野が広がりました。",
+    "Education2-3": "協定校の香港中文大学で中国語の1か月間の中国語短期留学を経験しました。中華文化圏への視野が広がりました。",
+
     "GeikoOke": "九州大学芸術工学部フィルハーモニー管弦楽団",
     "GeikoOkePeriod": "2013年4月 ～ 2017年3月",
-    "GeikoOkeDescription-1": "大学時代部活動として九州大学芸術工学部フィルハーモニー管弦楽団のクラリネットパートを担当しました。",
+    "GeikoOkeDescription-1": "大学時代部活動として九州大学芸術工学部フィルハーモニー管弦楽団（通称：芸工オケ）のクラリネットパートを担当しました。",
     "GeikoOkeDescription-2": "4年間在籍の間、3回の定期演奏会と4回の学内演奏会、そして1回の合同オーケストラの演奏会に参加しました。",
     "GeikoOkeDescription-3": "2015年はクラリネットパートリーダーを務めました。",
+
     "福岡中国語学友会": "福岡中国語学友会",
     "2015 to 2019": "2015年 ～ 2019年",
     "福岡中国語学友会-1": "Facebookグループ「福岡中国語学友会」にて会長と2人で中国語勉強会の開催人を務めました。たくさんの中華文化圏の方達と交流できる貴重な経験になりました。",
+
     "Forest Witch Description-1": "[プロジェクト期間] 2015年12月 ～ 2016年1月（2ヶ月）",
     "Forest Witch Description-2": "[言語] 日本語・韓国語・中国語（繁体字）",
     "Forest Witch Description-3": "[説明] 大学時代4人のチームでゲームを作り上げ、第9回福岡ゲームコンテストに出品したアクションゲームです。",
-    "Forest Witch Description-4": "[プロジェクト期間] 手に汗を握る迫真力のあるアクションゲームで、周りの方にから好評を得ていました。",
+    "Forest Witch Description-4": "手に汗を握る迫真力のあるアクションゲームで、周りの方にから好評を得ていました。",
     "Forest Witch Download": "ゲームダウンロード（グーグルドライブ）",
+
     "基本情報技術者": "基本情報技術者",
     "色彩検定 2級": "色彩検定 2級",
     "ファイナンシャルプランナー 3級": "ファイナンシャルプランナー 3級（日本FP協会）",
