翻訳完了コミット

--- a/src/lang/ja.json
+++ b/src/lang/ja.json
@@ -2,55 +2,55 @@
     "hyunheeLee": "イヒョンヒ",
     "Software Developer": "ITエンジニア",
     "NotTranslated": "一部翻訳されていない部分があります。",
-    "About": "韓国・ソウル出身のイヒョンヒと申します。",
+    "About": "こんにちは。韓国・ソウル出身のイヒョンヒと申します。",
 
-    "About_Japan": "Worked as an IT Engineer from graduation from University in 2017 to the present",
+    "About_Japan": "大学を卒業してからは現在までITエンジニアとして勤めています。",
 
     "Smaregi Inc.": "株式会社スマレジ",
     "Growth": "グロース市場上場企業",
     "Jun. 2021 to Present": "2021年6月から現在",
-    "Smaregi-1": "開発部",
-    "Smaregi-2": "モダンなPHPフレームワークを使い社内ツール開発中。",
+    "Smaregi-1": "開発部 プログラマー",
+    "Smaregi-2": "モダンなPHPフレームワークを使い社内開発に挑戦中。",
 
     "AdInte Co. ltd.": "株式会社アドインテ",
     "Nov. 2020 to May 2021": "2020年11月 ～ 2021年5月",
     "AdInte-1": "プロダクトDiv エンジニア",
     "AdInte-2": "A. 糸貿易システム",
-    "AdInte-3": "Developed a yarn trade system that supports multiple languages: Japanese, Mandarin Chinese, and English using codeigniter PHP framework",
+    "AdInte-3": "Codeigniterを使い糸貿易システムの開発に携わりました。日本語、中国語、英語での翻訳も担当しています。",
     "AdInte-4": "B. 広告枠管理ツール",
-    "AdInte-5": "Developed a tool that manages each store’s advertisement space information that used to be managed in Excel",
+    "AdInte-5": "社内ツールの実装",
 
     "Cyber Port Inc.": "株式会社サイバーポート",
     "Aug. 2019 to Oct. 2020": "2019年8月 ～ 2020年10月",
-    "CyberPort-1": "Web Developer at Development department",
-    "CyberPort-2": "Developed landing page designs, e-commerce sites, an invitation-only shopping mall website and created Search Engine Optimisation (SEO) strategies",
+    "CyberPort-1": "開発部 Webエンジニア",
+    "CyberPort-2": "LPやECサイト、ショッピングサイト構築及びSEO対策を経験。",
 
     "Livelynx Inc.": "株式会社ライブリンクス",
     "Sep. 2017 to May 2019": "2017年9月 ～ 2019年5月",
-    "Livelynx-1": "Software Developer at System Integration Division",
-    "Livelynx-2": "Developed a SDN controller system and three graph programs using modern JavaScript library(react, redux) technologies",
+    "Livelynx-1": "システムインテグレーション事業部 エンジニア",
+    "Livelynx-2": "モダンなJavaScriptライブラリ(react, redux)を用いたSDNコントローラシステムおよびグラフプログラムの実装を経験。",
 
     "Cross Games Inc.": "株式会社クロスゲームズ",
     "CrossGames-1": "2016年9月 ～ 2017年3月 学生インターンシップ",
     "CrossGames-2": "2017年4月 ～ 2017年7月 ゲームプログラマー",
-    "CrossGames-3": "Game programmer at Development department",
-    "CrossGames-4": "Developed a volleyball game for smartphones on consignment using Unity",
+    "CrossGames-3": "開発部 ゲームプログラマー",
+    "CrossGames-4": "Unityを用いてスマートフォンゲームの開発に携わりました。",
 
-    "About_Korea": "Prior to entering University in 2013, I was engaged in the military service for three years as a factory worker from January 2010 to January 2013.",
+    "About_Korea": "2013年に大学に入学する前、2010年1月から2013年1月までの3年間、兵役義務の一環で工場労働者として従事しました。",
 
     "Powertronics Co.,Ltd.": "株式会社パワートロニクス",
     "Aug. 2011 to Jan. 2013": "2011年8月 ～ 2013年1月",
     "Powertronics-1": "生産部",
-    "Powertronics-2": "Worked as a factory worker as part of military service (Mar. 2010 to Jan. 2013)",
-    "Powertronics-3": "Led a team of four and managed antenna production, packaging and quality check, increased productivity about 33% by voluntarily creating a quality check manual",
-    "Powertronics-4": "Awarded as the best staff of 2012",
+    "Powertronics-2": "兵役義務の一環としての従事",
+    "Powertronics-3": "4名のチームを率いて、アンテナ部品生産、QC、包装を管理。自発的にマニュアルを作成することで生産性を向上。",
+    "Powertronics-4": "2012年度の生産チーム優秀社員として選ばれました。",
 
     "HanShinKiJeon Co., Ltd.": "株式会社韓信企電",
     "Jan. 2010 to Aug. 2011": "2010年1月 ～ 2011年8月",
-    "HanShinKiJeon-1": "生産部",
-    "HanShinKiJeon-2": "Worked as a factory worker as part of military service (Mar. 2010 to Jan. 2013)",
-    "HanShinKiJeon-3": "Inspected parts of hard disk and printer",
-    "HanShinKiJeon-4": "Managed the molds that produced the hard disk and printer components",
+    "HanShinKiJeon-1": "生産部 クリーンルーム所属",
+    "HanShinKiJeon-2": "兵役義務の一環としての従事",
+    "HanShinKiJeon-3": "ハードディスク、プリンターの部品点検",
+    "HanShinKiJeon-4": "ハードディスクやプリンターの部品を生産する金型の管理",
 
     "QU1-1": "九州大学",
     "QU1-2": "芸術工学部 芸術情報設計学科",
@@ -74,7 +74,7 @@
     "Forest Witch Description-2": "[言語] 日本語・韓国語・中国語（繁体字）",
     "Forest Witch Description-3": "[説明] 大学時代4人のチームでゲームを作り上げ、第9回福岡ゲームコンテストに出品したアクションゲームです。",
     "Forest Witch Description-4": "手に汗を握る迫真力のあるアクションゲームで、周りの方にから好評を得ていました。",
-    "Forest Witch Download": "ゲームダウンロード（グーグルドライブ）",
+    "Forest Witch Download": "ゲームダウンロード",
 
     "基本情報技術者": "基本情報技術者",
     "色彩検定 2級": "色彩検定 2級",
