--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -2,9 +2,9 @@
     "hyunheeLee": "Hyunhee Lee",
     "Software Developer": "Software Developer",
     "NotTranslated": "Some pages are not translated yet.",
-    "About": "I am Hyunhee Lee from Seoul, Korea. Engaging an IT Engineer.",
+    "About": "Hello! I am Hyunhee Lee from Seoul, Korea. Engaging an IT Engineer. Nice to meet you!",
 
-    "About_Japan": "Worked as an IT Engineer from graduation from University in 2017 to the present",
+    "About_Japan": "Worked as an IT Engineer from graduation from University in 2017 to present",
 
     "Smaregi Inc.": "Smaregi Inc.",
     "Growth": "A Tokyo Stock Exchange Growth market listed company",
@@ -42,8 +42,8 @@
     "Aug. 2011 to Jan. 2013": "Aug. 2011 to Jan. 2013",
     "Powertronics-1": "Factory worker at Manufacturing Team",
     "Powertronics-2": "Worked as a factory worker as part of military service (Mar. 2010 to Jan. 2013)",
-    "Powertronics-3": "Led a team of four and managed antenna production, packaging and quality check, increased productivity about 33% by voluntarily creating a quality check manual",
-    "Powertronics-4": "Awarded as the best staff of 2012",
+    "Powertronics-3": "Led a team of four and managed antenna production, packaging and quality check",
+    "Powertronics-4": "Awarded as the best staff of the 2012 production team",
 
     "HanShinKiJeon Co., Ltd.": "HanShinKiJeon Co., Ltd.",
     "Jan. 2010 to Aug. 2011": "Jan. 2010 to Aug. 2011",
@@ -62,22 +62,22 @@
 
     "GeikoOke": "Geiko Oke",
     "GeikoOkePeriod": "Apr. 2013 to Mar. 2017",
-    "GeikoOkeDescription-1": "大学時代部活動として九州大学芸術工学部フィルハーモニー管弦楽団のクラリネットパートを担当しました。",
-    "GeikoOkeDescription-2": "4年間在籍の間、3回の定期演奏会と4回の学内演奏会、そして1回の合同オーケストラの演奏会に参加しました。",
-    "GeikoOkeDescription-3": "2015年はクラリネットパートリーダーを務めました。",
+    "GeikoOkeDescription-1": "As a university club activities, played the clarinet in the Philharmonic Orchestra of School of Design of Kyushu University.(alias Geiko Oke)",
+    "GeikoOkeDescription-2": "During my four years with the orchestra, I participated in three subscription concerts, four intramural concerts and one joint orchestra concert.",
+    "GeikoOkeDescription-3": "Acted as a clarinet part leader in 2015.",
 
-    "福岡中国語学友会": "福岡中国語学友会",
+    "福岡中国語学友会": "Fukuoka Chinese Language Study Group",
     "2015 to 2019": "2015 to 2019",
-    "福岡中国語学友会-1": "Facebookグループ「福岡中国語学友会」にて会長と2人で中国語勉強会の開催人を務めました。たくさんの中華文化圏の方達と交流できる貴重な経験になりました。",
+    "福岡中国語学友会-1": "Worked as a organizer of a Chinese study group in the Facebook group 'Fukuoka Chinese Study Group（福岡中国語学友会）'. It was a valuable experience for us to interact with many people from Chinese cultural sphere.",
 
-    "Forest Witch Description-1": "[プロジェクト期間] 2015年12月～2016年1月（2ヶ月）",
-    "Forest Witch Description-2": "[言語] 日本語・韓国語・中国語（繁体字）",
-    "Forest Witch Description-3": "[説明] 大学時代4人のチームでゲームを作り上げ、第9回福岡ゲームコンテストに出品したアクションゲームです。",
-    "Forest Witch Description-4": "手に汗を握る迫真力のあるアクションゲームで、周りの方にから好評を得ていました。",
-    "Forest Witch Download": "Download URL（Google Drive）",
+    "Forest Witch Description-1": "[Project period] Dec. 2016 to Jan. 2017",
+    "Forest Witch Description-2": "[Supported Languages] Japanese, Korean, Traditional Chinese",
+    "Forest Witch Description-3": "[Description] This is an action game that was created by a team when I was a university student and was submitted to the 9th Fukuoka Game Contest.",
+    "Forest Witch Description-4": "",
+    "Forest Witch Download": "Download URL",
 
     "基本情報技術者": "Fundamental Information Technology Engineer Examination",
-    "色彩検定 2級": "Color Cordination The Second Level`",
+    "色彩検定 2級": "Color Cordination The Second Level",
     "ファイナンシャルプランナー 3級": "3rd grade Certified Skilled Professional of Financial Planning",
     "전자기기기능사": "Craftsman Electronic Apparatus",
     "JLPT Level 1": "Japanese Language Proficiency Test Level 1",
