--- a/src/lang/kr.json
+++ b/src/lang/kr.json
@@ -2,76 +2,79 @@
     "hyunheeLee": "이현희",
     "Software Developer": "소프트웨어 개발자",
     "NotTranslated": "아직 번역이 되지않은 부분이 있습니다.",
-    "About": "대한민국 서울출신의 IT개발자 이현희 입니다.",
+    "About": "안녕하세요. 대한민국 서울출신의 IT개발자 이현희 입니다.",
 
-    "About_Japan": "Worked as an IT Engineer from graduation from University in 2017 to the present",
+    "About_Japan": "2017년 대학교 졸업후에는 현재까지 IT개발자로 일하고있습니다.",
 
     "Smaregi Inc.": "Smaregi Inc.",
     "Growth": "도쿄증시 그로스시장 상장 기업",
     "Jun. 2021 to Present": "2021.06 ～ 현재",
-    "Smaregi-1": "개발부",
+    "Smaregi-1": "개발부 개발자",
     "Smaregi-2": "모던한 PHP프레임워크를 사용하여 사내 툴 개발중",
 
     "AdInte Co. ltd.": "AdInte Co. ltd.",
     "Nov. 2020 to May 2021": "2020.11 ～ 2021.05",
-    "AdInte-1": "Software Developer at Product Division",
-    "AdInte-2": "A. Yarn Trade System",
-    "AdInte-3": "Developed a yarn trade system that supports multiple languages: Japanese, Mandarin Chinese, and English using codeigniter PHP framework",
-    "AdInte-4": "B. Advertisement space management tool",
-    "AdInte-5": "Developed a tool that manages each store’s advertisement space information that used to be managed in Excel",
+    "AdInte-1": "프로덕트 div. 소프트웨어 개발자",
+    "AdInte-2": "A. 섬유 무역 시스템",
+    "AdInte-3": "codeigniter PHP 프레임워크를 사용하여 일본어, 중국어, 영어 등 다국어를 지원하는 섬유 무역 시스템 개발",
+    "AdInte-4": "B. 광고 예약 툴",
+    "AdInte-5": "엑셀로 관리해오던 광고예약툴을 사내용으로 개발하였습니다.",
 
     "Cyber Port Inc.": "Cyber Port Inc.",
     "Aug. 2019 to Oct. 2020": "2019.08 ～ 2020.10",
-    "CyberPort-1": "Web Developer at Development department",
-    "CyberPort-2": "Developed landing page designs, e-commerce sites, an invitation-only shopping mall website and created Search Engine Optimisation (SEO) strategies",
+    "CyberPort-1": "개발부 웹개발자",
+    "CyberPort-2": "워드프레스를 사용한 LP와 EC사이트, 쇼핑몰개발 그리고 검색 엔진 최적화(SEO)를 경험했습니다.",
 
     "Livelynx Inc.": "Livelynx Inc.",
-    "Sep. 2017 to May 2019": "Sep. 2017 to May 2019",
-    "Livelynx-1": "Software Developer at System Integration Division",
-    "Livelynx-2": "Developed a SDN controller system and three graph programs using modern JavaScript library(react, redux) technologies",
+    "Sep. 2017 to May 2019": "2017.09 ～ 2019.05",
+    "Livelynx-1": "시스템 통합 부서 소프트웨어 개발자",
+    "Livelynx-2": "JavaScript 라이브러리(react, redux) 기술을 사용하여 SDN 컨트롤러 시스템 및 3개의 그래프 프로그램 개발",
 
     "Cross Games Inc.": "Cross Games Inc.",
-    "CrossGames-1": "Sep. 2016 to Mar. 2017 Student Internship",
-    "CrossGames-2": "Apr. 2017 to Jul. 2017 Game Programmer",
-    "CrossGames-3": "Game programmer at Development department",
-    "CrossGames-4": "Developed a volleyball game for smartphones on consignment using Unity",
+    "CrossGames-1": "2016.09 ～ 2017.03 학생 인턴십",
+    "CrossGames-2": "2017.04 ～ 2017.07 게임 프로그래머",
+    "CrossGames-3": "개발부서 게임프로그래머",
+    "CrossGames-4": "Unity를 활용한 위탁 스마트폰용 배구 게임 개발",
 
-    "About_Korea": "Prior to entering University in 2013, I was engaged in the military service for three years as a factory worker from January 2010 to January 2013.",
+    "About_Korea": "2013년4월에 일본 큐슈대학에 입학하기전, 2010년1월부터 2013년1월까지 3년간 (산업기능요원 편입은 2010년3월) 산업기능요원으로써 공장에서 종사하였습니다.",
 
     "Powertronics Co.,Ltd.": "주식회사 파워트로닉스",
-    "Aug. 2011 to Jan. 2013": "2011年8月 ～ 2013年1月",
+    "Aug. 2011 to Jan. 2013": "2011.08 ～ 2013.01",
     "Powertronics-1": "생산부",
-    "Powertronics-2": "Worked as a factory worker as part of military service (Mar. 2010 to Jan. 2013)",
-    "Powertronics-3": "Led a team of four and managed antenna production, packaging and quality check, increased productivity about 33% by voluntarily creating a quality check manual",
-    "Powertronics-4": "Awarded as the best staff of 2012",
+    "Powertronics-2": "산업기능요원으로 공장 노동자로 근무",
+    "Powertronics-3": "4인조로 안테나 제작, 패키징, 품질점검 관리",
+    "Powertronics-4": "2012년도 생산부 최우수사원 선정",
 
     "HanShinKiJeon Co., Ltd.": "주식회사 한신기전",
-    "Jan. 2010 to Aug. 2011": "2010年1月 ～ 2011年8月",
+    "Jan. 2010 to Aug. 2011": "2010.01 ～ 2011.08",
     "HanShinKiJeon-1": "생산부 크린룸소속",
-    "HanShinKiJeon-2": "Worked as a factory worker as part of military service (Mar. 2010 to Jan. 2013)",
-    "HanShinKiJeon-3": "Inspected parts of hard disk and printer",
-    "HanShinKiJeon-4": "Managed the molds that produced the hard disk and printer components",
+    "HanShinKiJeon-2": "산업기능요원으로 공장 노동자로 근무",
+    "HanShinKiJeon-3": "하드 디스크 및 프린터 부품 검사와 세척",
+    "HanShinKiJeon-4": "하드 디스크 및 프린터 구성 요소를 생산하는 금형 관리",
 
     "QU1-1": "규슈대학",
     "QU1-2": "예술공학부 예술정보설계학과 학사",
     "QU2-1": "4년간 규슈대학 예술공학부 예술정보설계학과에서 주로 프로그래밍에 관련된 수업을 이수했습니다.",
+
     "CHUK1-1": "홍콩중문대학",
     "Education2-2": "International Summer school (중국어 과정)",
     "Education2-3": "협정교였던 홍콩중문대학에서 한달간 중국어단기유학을 경험하였습니다.",
+
     "GeikoOke": "규슈대학 예술공학부 필하모니 관현악단",
-    "GeikoOkePeriod": "2013年4月 ～ 2017年3月",
-    "GeikoOkeDescription-1": "大学時代部活動として九州大学芸術工学部フィルハーモニー管弦楽団のクラリネットパートを担当しました。",
-    "GeikoOkeDescription-2": "4年間在籍の間、3回の定期演奏会と4回の学内演奏会、そして1回の合同オーケストラの演奏会に参加しました。",
-    "GeikoOkeDescription-3": "2015年はクラリネットパートリーダーを務めました。",
+    "GeikoOkePeriod": "2013.04 ～ 2017.03",
+    "GeikoOkeDescription-1": "대학 시대부 활동으로서 규슈 대학 예술 공학부 필 하모니 관현악단의 클라리넷 파트를 담당했습니다.（약칭 Geiko Oke）",
+    "GeikoOkeDescription-2": "4년간 재적하는 동안 3회 정기연주회, 4회 학내연주회, 1회 합동 오케스트라 연주회에 참가했습니다.",
+    "GeikoOkeDescription-3": "2015년에는 클라리넷 파트 리더가 되었습니다.",
 
     "福岡中国語学友会": "후쿠오카 중국어 학우회",
-    "福岡中国語学友会-1": "Facebookグループ「福岡中国語学友会」にて会長と2人で中国語勉強会の開催人を務めました。たくさんの中華文化圏の方達と交流できる貴重な経験になりました。",
+    "2015 to 2019": "2015년 ～ 2019년",
+    "福岡中国語学友会-1": "Facebook 그룹 「후쿠오카 중국어 학우회」에서 회장과 둘이서 중국어 공부회의 개최인을 맡았습니다. 많은 중화 문화권의 분들과 교류할 수 있는 귀중한 경험이 되었습니다.",
 
-    "Forest Witch Description-1": "[프로젝트기간] 2015年12月 ～ 2016年1月（2ヶ月）",
+    "Forest Witch Description-1": "[프로젝트기간] 2015년12월 ～ 2016월1월（2개월）",
     "Forest Witch Description-2": "[언어] 한국어・일본어・중국어（번체자）",
-    "Forest Witch Description-3": "[설명] 大学時代4人のチームでゲームを作り上げ、第9回福岡ゲームコンテストに出品したアクションゲームです。",
-    "Forest Witch Description-4": "手に汗を握る迫真力のあるアクションゲームで、周りの方にから好評を得ていました。",
-    "Forest Witch Download": "게임다운로드（구글드라이브）",
+    "Forest Witch Description-3": "[설명] 대학생 시절 4명의팀으로 게임을 만들어 제9회 후쿠오카 게임 콘테스트에 출품한 액션 게임입니다.",
+    "Forest Witch Description-4": "손에 땀을 쥐는 박진감 넘치는 힘있는 액션 게임에서 주위 분들로부터 호평을 받았습니다.",
+    "Forest Witch Download": "게임 다운로드",
 
     "基本情報技術者": "기본정보기술자",
     "色彩検定 2級": "색채검정 2급",
