SPのCSS調整および日本語の修正

--- a/src/lang/ja.json
+++ b/src/lang/ja.json
@@ -34,7 +34,7 @@
     "CrossGames-1": "2016年9月 ～ 2017年3月 学生インターンシップ",
     "CrossGames-2": "2017年4月 ～ 2017年7月 ゲームプログラマー",
     "CrossGames-3": "開発部 ゲームプログラマー",
-    "CrossGames-4": "Unityを用いてスマートフォンゲームの開発に携わりました。",
+    "CrossGames-4": "学生インターンシップの経験を経て新卒として入社しました。インターンシップの時はQAの経験があります。Unityを用いてスマートフォンゲームの開発に携わりました。",
 
     "About_Korea": "2013年に大学に入学する前、2010年1月から2013年1月までの3年間、兵役義務の一環で工場労働者として従事しました。",
 
